[package]
name = "sap"
version = "0.1.0"
authors = ["mc1098"]
edition = "2018"
license = "MIT"

[dependencies]
sap-aria = { path = "crates/sap-aria" }
sap-utils = { path = "crates/sap-utils" }
wasm-bindgen = "0.2.74"

[dev-dependencies]
wasm-bindgen-test = "0.3.24"
js-sys = "0.3.55"

[dependencies.web-sys]
version = "0.3.51"
features = [
	"Event",
	"EventInit",
	"HtmlButtonElement",
	"HtmlElement",
	"HtmlImageElement",
	"HtmlLabelElement",
	"InputEvent",
	"InputEventInit",
	"KeyboardEvent",
	"KeyboardEventInit",
	"MouseEvent",
	"MouseEventInit",
	"NodeFilter",
	"NodeList",
	"TreeWalker",
]

[features]
default = []

[workspace]
# crates to document when using cargo doc
default-members = [
	"../sap",
	"crates/sap-aria",
	"crates/sap-mock",
	"crates/sap-utils",
]
members = [
	"crates/sap-aria",
	"crates/sap-mock",
	"crates/sap-utils",
	"examples/yew/counter",
	"examples/yew/v0.18.0/dashboard",
	"examples/yew/pub_sub",
	"examples/yew/router",
	"examples/yew/todo",
]

[patch.crates-io]
sap-aria = { path = "crates/sap-aria" }
