[package]
name = "hyphae"
version = "0.1.0"
authors = ["mc1098"]
edition = "2018"
license = "MIT"

[dependencies]
hyphae-aria = { path = "crates/hyphae-aria" }
hyphae-utils = { path = "crates/hyphae-utils" }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
	"Event",
	"EventInit",
	"HtmlButtonElement",
	"HtmlElement",
	"HtmlImageElement",
	"HtmlLabelElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
	"InputEvent",
	"InputEventInit",
	"KeyboardEvent",
	"KeyboardEventInit",
	"MouseEvent",
	"MouseEventInit",
	"NodeFilter",
	"NodeList",
	"TreeWalker",
]

[dev-dependencies.web-sys]
version = "0.3"
features = [
	"Text",
]

[features]
default = []

[workspace]
# crates to document when using cargo doc
default-members = [
	"../hyphae",
	"crates/hyphae-aria",
	"crates/hyphae-mock",
	"crates/hyphae-utils",
]
members = [
	"crates/hyphae-aria",
	"crates/hyphae-mock",
	"crates/hyphae-utils",
	"examples/yew/counter",
	"examples/yew/v0.18.0/dashboard",
	"examples/yew/pub_sub",
	"examples/yew/router",
	"examples/yew/todo",
	"examples/sycamore/counter",
	"examples/sycamore/todo",
]

