[package]
name = "sap-aria"
version = "0.1.0"
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
	"console",
	"CssStyleDeclaration",
	"Document",
	"Element",
	"HtmlAreaElement",
	"HtmlTextAreaElement",
	"HtmlImageElement",
	"HtmlInputElement",
	"HtmlLabelElement",
	"NodeList",
	"Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

