[package]
name = "sap-mock"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = "1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
sap-utils = { path = "../sap-utils" }

[dev-dependencies.web-sys] 
version = "0.3"
features = [
	"Blob",
	"console",
	"Element",
	"Response",
	"WebSocket",
	"Window",
]

[dev-dependencies.serde]
version = "1"
features = ["derive"]