[package]
name = "counter"
version = "0.1.0"
authors = ["mc1098 <m.cripps1@uni.brighton.ac.uk>"]
edition = "2018"

[dependencies]
yew = { git = "https://github.com/yewstack/yew.git" }
js-sys = "0.3.51"

[dev-dependencies]
sap = { path = "../../" }
sap-yew = { git = "https://github.com/mc1098/sap-yew.git" }
wasm-bindgen-test = "0.3.24"