[package]
name = "dashboard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = "1"
serde_derive = "1"
yew = { git = "https://github.com/yewstack/yew.git", features = ["toml"] }
yew-services = { git = "https://github.com/yewstack/yew.git" }

[dev-dependencies]
sap = { path = "../../" }
sap-yew = { path = "../../crates/sap-yew" }
sap-mock = { path = "../../crates/sap-mock" }
wasm-bindgen-test = "0.3.24"
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.24"
