[package]
name = "dashboard"
version = "0.1.0"
edition = "2018"


[dependencies]
anyhow = "1"
serde = "1"
serde_derive = "1"
yew = { git = "https://github.com/yewstack/yew.git", rev = "94b4752", features = ["toml"] }
yew-services = { git = "https://github.com/yewstack/yew.git", rev = "94b4752" }

[dev-dependencies]
sap = { path = "../../" }
sap-yew = { path = "../../crates/sap-yew" }
sap-mock = { path = "../../crates/sap-mock" }
sap-utils = { path = "../../crates/sap-utils" }
wasm-bindgen-test = "0.3.24"
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.24"