[package]
name = "router"
version = "0.1.0"
authors = ["mc1098 <m.cripps1@uni.brighton.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew.git" }
yew-router = { git = "https://github.com/yewstack/yew.git" }

[dev-dependencies]
sap = { path = "../.." }
sap-yew = { path = "../../crates/sap-yew" }
wasm-bindgen-test = "0.3.24"