[package]
name = "sycamore-todo"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4"
sycamore = { version = "0.7", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "0.8", features = ["v4", "wasm-bindgen", "serde"] }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
	"InputEvent",
	"KeyboardEvent",
	"Location",
	"Storage",
]

[dev-dependencies]
sap = { path = "../../../" }
wasm-bindgen-test = "0.3"
