[package]
name = "yew-counter"
version = "0.1.0"
authors = ["mc1098 <m.cripps1@uni.brighton.ac.uk>"]
edition = "2018"

[dependencies]
yew = "0.19.3"
js-sys = "0.3.51"

[dependencies.web-sys]
version = "0.3"
features = [
	"console",
]

[dev-dependencies]
hyphae = { path = "../../../" }
wasm-bindgen-test = "0.3.24"

[dev-dependencies.web-sys]
version = "0.3"
features = [
	"HtmlButtonElement",
	"HtmlElement",
]
