[package]
name = "pub_sub"
version = "0.1.0"
authors = ["mc1098 <m.cripps1@uni.brighton.ac.uk>"]
edition = "2018"

[dependencies]
yew = { git = "https://github.com/yewstack/yew.git" }
yew-agent = { git = "https://github.com/yewstack/yew.git" }

serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
sap = { path = "../../.." }
wasm-bindgen-test = "0.3.24"
