[package]
name = "router"
version = "0.1.0"
authors = ["mc1098 <m.cripps1@uni.brighton.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"

[dev-dependencies]
hyphae = { path = "../../.." }
wasm-bindgen-test = "0.3.24"

[dev-dependencies.web-sys]
version = "0.3"
features = [
	"HtmlElement",
]
