[package]
name = "todo"
version = "0.1.0"
authors = ["mc1098 <m.cripps1@uni.brighton.ac.uk>"]
edition = "2018"

[dependencies]
strum = "0.21"
strum_macros = "0.21"
serde = "1"
serde_derive = "1"
yew = { git = "https://github.com/yewstack/yew.git" }
gloo-storage = { git = "https://github.com/rustwasm/gloo.git" }

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]

[dev-dependencies]
sap = { path = "../../.." }
wasm-bindgen-test = "0.3.24"

[dev-dependencies.web-sys]
version = "0.3"
features = [
	"HtmlButtonElement",
	"HtmlElement",
]