[package]
name = "todo"
version = "0.1.0"
authors = ["mc1098 <m.cripps1@uni.brighton.ac.uk>"]
edition = "2018"

[dependencies]
strum = "0.21"
strum_macros = "0.21"
serde = "1"
serde_derive = "1"
yew = "0.19.3"
gloo-storage = "0.2.0"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]

[dev-dependencies]
hyphae = { path = "../../.." }
wasm-bindgen-test = "0.3.24"

[dev-dependencies.web-sys]
version = "0.3"
features = [
	"HtmlButtonElement",
	"HtmlElement",
]
